rules.v4
*nat
:PREROUTING ACCEPT [516:38541]
:INPUT ACCEPT [4:324]
:OUTPUT ACCEPT [1:328]
:POSTROUTING ACCEPT [1:328]
-A POSTROUTING -s 10.26.0.0/24 -o eth0 -j MASQUERADE
-A POSTROUTING -s 10.27.0.0/24 -o eth0 -j MASQUERADE
COMMIT
*filter
:INPUT ACCEPT [480:38108]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [2036:1031342]
-A INPUT -p udp -m udp --dport 1194 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -i tun+ -j ACCEPT
-A INPUT -i tap+ -j ACCEPT
-A FORWARD -i tun+ -j ACCEPT
-A FORWARD -i tap+ -j ACCEPT
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -s 10.26.0.0/24 -j ACCEPT
-A FORWARD -s 10.27.0.0/24 -j ACCEPT
-A FORWARD -j REJECT --reject-with icmp-port-unreachable
COMMIT
